Added Spotless